--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,32 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>1.2.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>build</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<imageName>weatherverse-app</imageName>
+					<baseImage>openjdk:17-jdk-alpine</baseImage>
+					<dockerDirectory>${project.basedir}</dockerDirectory> <!-- Dockerfile is in the root of your project -->
+					<buildArgs>
+						<JAR_FILE>target/weatherverse-0.0.1-SNAPSHOT.jar</JAR_FILE>
+					</buildArgs>
+						<dockerHost>tcp://localhost:2375</dockerHost>
+				</configuration>
+			</plugin>
+
 		</plugins>
+
 	</build>
+
+
 
 </project>
