Updated apikey in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=weatherverse
 
+API_KEY = a4e3a7c56e8f849c88222a985df848e4
 weatherstack.url = http://api.weatherstack.com/current?access_key=
 
 
