API Key Updated V2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=weatherverse
 
-API_KEY = 2763094a525c671a105577b80b7d58e2
-weatherstack.url = http://api.weatherstack.com/current?access_key=
+API_KEY=2763094a525c671a105577b80b7d58e2
+weatherstack.url=http://api.weatherstack.com/current?access_key=
 
 
 
